--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -5,6 +7,8 @@ html {
 * {
   box-sizing: inherit;
   margin: 0;
+  outline: none;
+  font-family: 'Quantico', sans-serif;
 }
 
 body {
@@ -15,7 +19,9 @@ body {
 }
 
 .App {
-  box-shadow: -3px 3px 2px grey;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  user-select: none;
+  border: 10px solid black;
+  border-bottom: 20px solid black;
+  background-color: black;
+  border-radius: 20px 20px;
 }
