--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -5,19 +5,21 @@ h1 {
 .keyboard-container {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  box-shadow: -10px 50px 40px black;
   width: 80vw;
   height: 50vh;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
 }
 
 .ui-container {
-  border: 2px solid red;
+  color: white;
   height: 60%;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background-color: #000000;
+  background-image: linear-gradient(180deg, #f53803 0%, #f5d020 74%);
+  box-shadow:inset 0px 0px 20px black;
+  z-index: 1;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -25,8 +27,12 @@ h1 {
 .controls {
   font-size: 0.8rem;
   display: flex;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
-
+.controls:hover{
+  transform: scale(1.2);
+}
 .audio-controls,
 .adsr-controls {
   padding: 20px;
