--- a/src/components/Keyboard/Keys/key.css
+++ b/src/components/Keyboard/Keys/key.css
@@ -1,6 +1,7 @@
 .key {
   padding: 15px;
   border-radius: 0px 0px 10px 10px;
+  box-shadow: 0px 20px 30px black;
 }
 
 .white-key {
@@ -38,7 +39,7 @@
 
 .key-hl {
   transform:scale(1.1) translateY(.6vh);
-  box-shadow: inset 0 0 5px black;
+  box-shadow: inset 0 0 2px grey;
   background-color: #f5d020;
   background-image: linear-gradient(315deg, #f53803 0%, #f5d020 74%);
   border-radius: 6px 6px 10px 10px;
