--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #b8c6db;
+  background-image: linear-gradient(360deg, #b8c6db 0%, #f5f7fa 74%);
+  box-shadow: inset 0px 20px 100px black;
+  background-size: cover;
 }
 
 code {
