--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,14 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  perspective: 1500px;
+  perspective: 200px;
 }
 .App {
-  transform: rotateX(10deg) ;
+  transform: rotateX(1deg) rotateZ(0deg);
   user-select: none;
   border: 10px solid black;
   border-bottom: 20px solid black;
   background-color: black;
   border-radius: 20px 20px;
-  box-shadow: 30px 5px 25px black;
+  box-shadow: 30px 5px 40px black;
 }
