--- a/src/components/Keyboard/Keys/key.css
+++ b/src/components/Keyboard/Keys/key.css
@@ -14,7 +14,7 @@
   background-color: whitesmoke;
   justify-content: center;
   align-items: flex-end;
-  box-shadow:inset .5px 1px 1px black;
+  box-shadow: inset 0px 0px 2px grey, 5px 0px 10px black;
 }
 
 .black-key {
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  box-shadow: inset 0px 0px 10px dimgrey;
+  box-shadow: inset 0px 0px 2px grey, 5px 0px 5px black;
 }
 
 .black-key-container {
