--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -18,7 +18,7 @@ h1 {
   justify-content: space-around;
   background-color: #000000;
   background-image: linear-gradient(180deg, #f53803 0%, #f5d020 74%);
-  box-shadow:inset 0px 0px 20px black;
+  box-shadow:inset 0px 0px 2g0px black;
   z-index: 1;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
