--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -17,8 +17,9 @@ h1 {
   align-items: center;
   justify-content: space-around;
   background-color: #000000;
-  background-image: linear-gradient(180deg, #f53803 0%, #f5d020 74%);
-  box-shadow:inset 0px 0px 2g0px black;
+  background-image: linear-gradient(180deg, #f53803 10%, #f5d020 74%);
+  box-shadow:inset 0px 0px 20px black;
+  border: 5px solid black;
   z-index: 1;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
