--- a/src/components/Keyboard/Keys/key.css
+++ b/src/components/Keyboard/Keys/key.css
@@ -2,33 +2,35 @@
   padding: 15px;
   border-radius: 0px 0px 10px 10px;
   box-shadow: 0px 20px 30px black;
+  cursor: pointer;
 }
 
 .white-key {
-  flex: 1 1 1vw;
-  overflow: hidden;
-  font-size: 0.8rem;
+  flex: 1;
+  font-size: 1.2rem;
+  width: 1vw;
   z-index: 1;
   position: relative;
   display: flex;
   background-color: whitesmoke;
   justify-content: center;
   align-items: flex-end;
-  box-shadow: inset 0px 0px 2px grey, 5px 0px 10px black;
+  box-shadow: inset 0px 0px 2px black, 5px 0px 10px black, 0 5px #999;
 }
 
 .black-key {
   height: 75%;
   background-color: black;
   color: white;
-  font-size: 0.6rem;
+  font-size: 0.9rem;
   user-select: none;
   position: absolute;
   width: 1.5vw;
+  top: -5px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  box-shadow: inset 0px 0px 2px grey, -3px 0px 5px black;
+  box-shadow: inset 0px 0px 2px black, -3px 0px 5px black, 0 2px #999;
 }
 
 .black-key-container {
@@ -38,9 +40,10 @@
 }
 
 .key-hl {
-  transform:scale(1.1) translateY(-.3vh);
-  box-shadow: inset 0 0 2px grey;
+  transform: translateY(0.5vh);
   background-color: #f5d020;
   background-image: linear-gradient(315deg, #f53803 0%, #f5d020 74%);
   border-radius: 6px 6px 10px 10px;
+  font-size: 1.2rem;
+  box-shadow: 0 1px #666;
 }
