--- a/src/components/Keyboard/UI/instrument.css
+++ b/src/components/Keyboard/UI/instrument.css
@@ -1,62 +1,67 @@
-.instrument select{
-    background-color: whitesmoke;
-    box-shadow: inset 0px 0px 20px black;
-    padding: 15px;
-    border-radius: 20px 8px 8px 20px;
+.instrument select {
+  background-color: whitesmoke;
+  box-shadow: inset 0px 0px 20px black, 2px 20px 20px black;
+  padding: 15px;
+  border-radius: 20px 8px 8px 20px;
+  margin-left: 5vw;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
 
-.instrument:hover{
-    transform: scale(1.2);
+.instrument:hover {
+  transform: scale(1.2);
 }
 
 ::-webkit-scrollbar {
-    width: 15px;
-    border-bottom-right-radius: 100px;
+  width: 15px;
+  border-bottom-right-radius: 100px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background-color: black;
-    border-radius: 20px;
-    height: 30px;
+  background-color: black;
+  border-radius: 20px;
+  height: 30px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #ff761a;
+  background: #ff761a;
 }
 
-input[type=range] {
-    -webkit-appearance: none;
-    margin: 5px 0;
-    width: 100%;
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 5px 0;
+  width: 100%;
 }
-input[type=range]:focus {
-    outline: none;
+input[type="range"]:focus {
+  outline: none;
 }
-input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 7px;
-    cursor: pointer;
-    animate: 0.1s;
-    box-shadow: inset 0px 0px 2px black, 0px 0px 1px #0d0d0d;
-    background: whitesmoke;
-    border-radius: 1px;
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 7px;
+  cursor: pointer;
+  animate: 0.1s;
+  box-shadow: inset 0px 0px 2px black, 0px 0px 1px #0d0d0d;
+  background: whitesmoke;
+  border-radius: 1px;
 }
-input[type=range]::-webkit-slider-thumb {
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    height: 11px;
-    width: 15px;
-    border-radius: 20px;
-    background: black;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -2px;
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  height: 11px;
+  width: 15px;
+  border-radius: 20px;
+  background: black;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -2px;
 }
-input[type=range]:focus::-webkit-slider-runnable-track {
+
+.spinner {
+  margin-left: 13vw;
 }
