--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -5,9 +5,14 @@ h1 {
 .keyboard-container {
   display: flex;
   flex-direction: column;
+  border-bottom: 15px solid black;
+  border-right: 1px solid black;
+  border-left: 5px solid black;
   box-shadow: -25px 30px 20px black;
   width: 80vw;
   height: 50vh;
+  background-color: black;
+  border-radius: 20px;
 }
 
 .ui-container {
@@ -18,7 +23,7 @@ h1 {
   justify-content: space-around;
   background-color: #000000;
   background-image: linear-gradient(180deg, #f53803 10%, #f5d020 74%);
-  box-shadow:inset 0px 0px 20px black;
+  box-shadow: inset 0px 0px 20px black;
   border: 5px solid black;
   z-index: 1;
   border-top-left-radius: 20px;
@@ -26,15 +31,15 @@ h1 {
 }
 
 .controls {
-  font-size: 0.8rem;
   display: flex;
+  margin-right: 3vw;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.controls:hover{
-  transform: scale(1.2);
+.controls:hover {
+  transform: scale(1.02);
 }
 .audio-controls,
 .adsr-controls {
-  padding: 20px;
+  padding: 5px;
 }
