--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -5,10 +5,10 @@ h1 {
 .keyboard-container {
   display: flex;
   flex-direction: column;
-  border-bottom: 15px solid black;
+  border-bottom: 20px solid black;
   border-right: 1px solid black;
   border-left: 5px solid black;
-  box-shadow: -25px 30px 20px black;
+  box-shadow: 0px 40px 60px orangered, 0px 2px 2px black;
   width: 80vw;
   height: 50vh;
   background-color: black;
@@ -17,29 +17,35 @@ h1 {
 
 .ui-container {
   color: white;
-  height: 60%;
+  height: 59%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   background-color: #000000;
   background-image: linear-gradient(180deg, #f53803 10%, #f5d020 74%);
-  box-shadow: inset 0px 0px 20px black;
+  box-shadow: inset 0px 0px 30px black, 0px 10px 25px black;
   border: 5px solid black;
   z-index: 1;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  opacity: 1;
 }
 
 .controls {
+  color: black;
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 3vw;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  font-weight: 400;
 }
 .controls:hover {
   transform: scale(1.02);
 }
 .audio-controls,
 .adsr-controls {
+  margin: 20px;
   padding: 5px;
 }
