--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  font-weight: bolder;
+}
 body {
   margin: 0;
   padding: 0;
@@ -14,7 +17,8 @@ body {
 }
 
 html {
-  font-size: 0.6rem;
+  font-size: 0.65rem;
+  font-weight: bold;
 }
 
 code {
