--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -8,7 +8,7 @@ h1 {
   border-bottom: 20px solid black;
   border-right: 1px solid black;
   border-left: 5px solid black;
-  box-shadow: 0px 40px 60px orangered, 0px 2px 2px black;
+  box-shadow: 0px 40px 60px orange;
   width: 80vw;
   height: 50vh;
   background-color: black;
