Updated zoom on key

--- a/src/components/Keyboard/Keys/key.css
+++ b/src/components/Keyboard/Keys/key.css
@@ -47,4 +47,5 @@
   background-image: linear-gradient(315deg, #f53803 0%, #f5d020 74%);
   border-radius: 6px 6px 10px 10px;
   box-shadow: 0 2px #666;
+  font-size: 1.5rem;
 }
